--- a/CSS/style.css
+++ b/CSS/style.css
@@ -101,17 +101,16 @@ body {
 
 /* start section -2 analytics */
 .analytics {
-    margin: 20px 10px;
+    margin: auto;
+    width: 90%;
 }
 
 .analytics h2 {
     text-align: center;
     margin: 20px 0;
 }
-.analytics .overview {
-    margin: auto;
-    width: 90%;
-}
+
+/* overview */
 
 .analytics .overview div {
     margin: 20px 0;
@@ -140,6 +139,28 @@ body {
     text-align: center;
 }
 
+/* engagnent */
+.analytics .engagment h3 {
+    margin: 20px 0;
+}
+
+.analytics .engagment .engagContent {
+    border: 1px solid #c5c5c5;
+    padding: 10px;
+    width: 60%;
+    text-align: center;
+    margin: auto;
+}
+
+.analytics .engagment .engagContent img {
+    width: 100%;
+}
+
+@media (max-width: 767px) {
+    .analytics .engagment .engagContent {
+        width: 90%;
+    }
+}
 /* end section -2 analytics */
 
 /* end main */
